Archive2/26/78cd59269fe6c4/output
main.cpp:12:32: error: unknown type name 'C'
    ctor(const x<R, C>& = x<R, C>()) {}
                               ^
main.cpp:12:33: error: expected ')'
    ctor(const x<R, C>& = x<R, C>()) {}
                                ^
main.cpp:12:9: note: to match this '('
    ctor(const x<R, C>& = x<R, C>()) {}
        ^
main.cpp:12:30: error: expected '>'
    ctor(const x<R, C>& = x<R, C>()) {}
                             ^
3 errors generated.
